lbdb (0.26) unstable; urgency=low

  * m_finger: Suppress lines where real name is '???' (some versions of
    finger seem to use this for non existing users) (Closes: #112127).
  * m_wanderlust: new module to read ~/.addesses file from WanderLust
    MUA.  Module provided by Gergely Nagy <algernon@debian.org>.
    (Closes: #133209).
  
 -- Roland Rosenfeld <roland@debian.org>  Mon, 11 Feb 2002 16:36:48 +0100

lbdb (0.25.2) unstable; urgency=low

  * New version (1.10) of lbdb.el by Dave Pearson <davep@davep.org>:
    Fixes the fact that, when in an emacs that doesn't have
    `line-{beginning,end}-position' available (xemacs, for example) I
    wasn't defining fully compatible versions.
  * Add short description to mutt_ldap_query in NAME section.
  * Add m_getent by Adrian Likins <alikins@redhat.com>, which can replace
    m_passwd and m_yppasswd on systems where getent(1) is installed.
  * Add option -a to fetchaddr and lbdb-fetchaddr to fetch also addresses
    without realname.
  * Upgrade to Policy version 3.5.6 (no changes).
  * Use debhelper >= 2.2.0
    - Use DH_COMPAT=3 instead of DH_COMPAT=2
    - remove debian/conffiles, which is automatically generated by
      DH_COMPAT=3.
    - replace dh_installmanpages by dh_installman
    - dh_strip now knows about DEB_BUILD_OPTIONS=nostrip itself
    - activate dh_perl, because we also build perl scripts.
    - Add ${perl:Depends} to debian/control.

 -- Roland Rosenfeld <roland@debian.org>  Sat,  1 Sep 2001 13:09:58 +0200

lbdb (0.25.1) unstable; urgency=low

  * Add ">" to pod2man call in Makefile, because older versions of perl
    come with a pod2man which dies otherwise.

 -- Roland Rosenfeld <roland@debian.org>  Tue, 24 Jul 2001 17:47:16 +0200

lbdb (0.25) unstable; urgency=low

  * Suggest mutt-ja as an alternative to mutt, because mutt-ja currently
    does not provide mutt (Closes: #85923).
  * Add m_ldap and mutt_ldap_query provided by Marc de Courville,
    <marc@courville.org>.