@@ -31,7 +31,7 @@ m_getent_query()
 	HOST="`lbdb_hostname`"
 
 	$GETENT passwd \
-	| grep -i $f_user \
+	| grep -i "$f_user" \
 	| sed -e "s/^\([^:]*\):[^:]*:\([^:]*\):[^:]*:\([^:,]*\)[,:].*\$/\1@$HOST	\3	UID \2/"
     fi
 }
